--- a/styles/components/buttons.scss
+++ b/styles/components/buttons.scss
@@ -1,7 +1,23 @@
-button {
-  padding: 12px;
-  border: none;
-  background-color: #333;
-  border-radius: 3px;
+.btn {
+  display: inline-block;
+  text-decoration: none;
+  font-weight: bold;
+
+  min-width: 140px;
+  padding: 15px 20px;
+
+  text-align: center;
+
   color: rgba(#fff, .8);
+  border: none;
+  border-radius: 3px;
+  background-color: #443b55;
+
+  fill: #fff;
+
+  &_bottom-line {
+    font-size: 13px;
+
+    margin-top: 10px;
+  }
 }
