--- a/styles/components/main-container.scss
+++ b/styles/components/main-container.scss
@@ -3,11 +3,15 @@
 
   &_heading {
     font-size: 30px;
-    margin: 40px 0;
+    padding: 40px 0;
   }
 
   &_image {
     border-radius: 5px;
     box-shadow: 0 5px 50px rgba(#563255, .7);
+  }
+
+  &_cta {
+    padding: 40px 0;
   }
 }
