--- a/styles/components/buttons.scss
+++ b/styles/components/buttons.scss
@@ -1,12 +1,14 @@
 .btn {
-  display: inline-block;
-  text-decoration: none;
   font-weight: bold;
+
+  display: inline-block;
 
   min-width: 140px;
   padding: 15px 20px;
 
+  cursor: pointer;
   text-align: center;
+  text-decoration: none;
 
   color: rgba(#fff, .8);
   border: none;
