--- a/styles/main.css
+++ b/styles/main.css
@@ -43,12 +43,13 @@
 }
 
 .btn {
-  display: inline-block;
-  text-decoration: none;
   font-weight: bold;
+  display: inline-block;
   min-width: 140px;
   padding: 15px 20px;
+  cursor: pointer;
   text-align: center;
+  text-decoration: none;
   color: rgba(255, 255, 255, 0.8);
   border: none;
   border-radius: 3px;
